Change code 204 for delete room
