# docs/swagger.yaml
@@ -73,8 +73,8 @@ paths:
         required: true
         type: integer
       responses:
-        "200":
-          description: OK
+        "204":
+          description: No Content
         "400":
           description: Invalid request
           schema:
